tests/fixtures/invalid/pow_str_list_set.py
# Cannot call pow() with Str, List[int], Set[int]
x = pow("hello", [1, 2, 3], {1, 2, 3})
